不知道写了什么demo

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':typedemo', ':mvp-common', ':mvp', ':mvp-viewstate-lib', ':mvptestdemo', ':mvpdemo2'
+include ':app', ':typedemo', ':mvp-common', ':mvp', ':mvp-viewstate-lib', ':mvptestdemo', ':mvpdemo2', ':mvpdemo3'
